--- a/css/font-awesome/css/font-awesome.css
+++ b/css/font-awesome/css/font-awesome.css
@@ -592,7 +592,7 @@
 .fa-sign-out:before {
   content: "\f08b";
 }
-.fa-linkedin-square:before {
+.fa-bilibili-square:before {
   content: "\f08c";
 }
 .fa-thumb-tack:before {
@@ -801,7 +801,7 @@
 .fa-envelope:before {
   content: "\f0e0";
 }
-.fa-linkedin:before {
+.fa-bilibili:before {
   content: "\f0e1";
 }
 .fa-rotate-left:before,
