--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -46,51 +46,10 @@
       letter-spacing: 1.5px;
    }
 
-
-   /* About Section
+   /* performances Section
    ------------------------------------------------------------------- */
-   #about .profile-pic {
-      width: 114px;
-      height: 114px;
-      margin-left: 12px;
-   }
-   #about .contact-details { width: 50%; }
-   #about .download { width: 50%; }
-
-   /* Resume Section
-   ------------------------------------------------------------------- */
-   #resume h1 { font: 16px/24px 'opensans-bold', sans-serif; }
-   #resume .main-col { padding-right: 5%; }   
-
-   /* Testimonials Section
-   ------------------------------------------------------------------- */
-   #testimonials .header-col h1:before {
-      font-size: 66px;
-      line-height: 66px;
-   }
-   #testimonials blockquote p {
-      font-size: 22px;
-      line-height: 46px;      
-   }
-
-    /* Call to Action Section
-   ------------------------------------------------------------------- */
-   #call-to-action .header-col h1:before {
-      font-size: 66px;
-      line-height: 66px;
-   }
-
-   /* Contact Section
-   ------------------------------------------------------------------- */
-   #contact .section-head { margin-bottom: 30px; }
-   #contact .header-col h1:before {
-      font-size: 66px;
-      line-height: 66px;
-   }
-   #contact .section-head p.lead { font: 17px/33px opensans-light, sans-serif; }
-
-
-}
+   #performances h1 { font: 16px/24px 'opensans-bold', sans-serif; }
+   #performances .main-col { padding-right: 5%; }   
 
 /* mobile wide/smaller tablets
 ---------------------------------------------------------------------- */
@@ -202,78 +161,26 @@
    }
 
    /* header social links */
-   header .social {
+   header .social-media {
       margin: 18px 0 24px 0;
       font-size: 24px;
       line-height: 36px;      
    }
-   header .social li { margin: 0 10px; }
+   header .social-media li { margin: 0 10px; }
 
     /* scrolldown link */
    header .scrolldown { display: none; }
 
-
-   /* About Section
-   -------------------------------------------------------------------- */
-   #about .profile-pic { display: none; }
-   #about .download .button {
-      width: 100%;
-      text-align: center;
-      padding: 15px 20px;
-   }
-   #about .main-col { padding-right: 30px; }
-
-
-   /* Resume Section
+   /* performances Section
    --------------------------------------------------------------------- */
-   #resume .header-col {
+   #performances .header-col {
       padding-top: 0;
       margin-bottom: 48px;
       text-align: center;
    }
-   #resume h1 { letter-spacing: 3px; }
-   #resume .main-col { padding-right: 30px; }
-   #resume h3, #resume .info { text-align: center; }
-      
-   .bars { width: 100%; }
-
-
-   /* Call To Action Section
-   /* ----------------------------------------------------------------- */
-   #call-to-action { text-align: center; }
-   #call-to-action h1 {
-      font: 16px/24px 'opensans-bold', sans-serif;
-      text-align: center;
-      margin-bottom: 30px;
-      text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
-   }
-   #call-to-action h1 span { display: block; }
-   #call-to-action .header-col h1:before { content: none; }
-   #call-to-action p { font-size: 15px; }
-
-
-   /* Portfolio Section
-   /* ----------------------------------------------------------------- */
-   #portfolio-wrapper .columns { margin-bottom: 40px; }
-   .popup-modal {	max-width: 85%; }
-
-
-   /* Testimonials Section
-   ----------------------------------------------------------------------- */
-   #testimonials .text-container { text-align: center; }
-   #testimonials h1 {
-      font: 16px/24px 'opensans-bold', sans-serif;
-      text-align: center;
-      margin-bottom: 30px;
-      text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
-   }
-   #testimonials h1 span { display: block; }
-   #testimonials .header-col h1:before { content: none; }
-   #testimonials blockquote { padding-bottom: 24px; }
-   #testimonials blockquote p {
-      font-size: 20px;
-      line-height: 42px;      
-   }
+   #performances h1 { letter-spacing: 3px; }
+   #performances .main-col { padding-right: 30px; }
+   #performances h3, #performances .info { text-align: center; }
 
    /* Control Nav */
    .flex-control-nav {
@@ -281,50 +188,12 @@
       margin-left: -30px;
    }
 
-
-   /* contact Section
-   ----------------------------------------------------------------------- */
-   #contact { padding-bottom: 66px; }
-   #contact .section-head { margin-bottom: 12px; }
-   #contact .section-head h1 {
-      font: 16px/24px 'opensans-bold', sans-serif;            
-      text-align: center;   
-      margin-bottom: 30px;
-      text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
-   }  
-   #contact h1 span { display: block; }
-   #contact .header-col { padding-top: 0; }
-   #contact .header-col h1:before { content: none;	}
-   #contact .section-head p.lead { text-align: center;}
-
-   /* form */
-   #contact label {
-      float: none;
-      width: 100%;
-   }
-   #contact input,
-   #contact textarea,
-   #contact select {
-     	margin-bottom: 6px;    	
-      width: 100%;
-   }
-   #contact button.submit { margin: 30px 0 24px 0; }
-   #message-warning, #message-success {
-      width: 100%;
-      margin-left: 0;
-   }
-
-
    /* footer
    ------------------------------------------------------------------------ */
   
    /* copyright */
    footer .copyright li:before { content: none; }
    footer .copyright li { margin-right: 12px; }
-
-   /* social links */
-   footer .social-links { font-size: 22px; }
-   footer .social-links li { margin-left: 18px; }
 
    /* Go To Top Button */
    #go-top { margin-left: -22px; }
@@ -360,16 +229,11 @@
    }
   
    /* header social links */
-   header .social { font-size: 20px;}
-   header .social li { margin: 0 6px; }
+   header .social-media { font-size: 20px;}
+   header .social-media li { margin: 0 6px; }
 
    /* footer
    ------------------------------------------------------------------------ */
-
-   /* social links */
-   footer .social-links { font-size: 20px; }
-   footer .social-links li { margin-left: 14px; }   
-
 }
 
 
